# chat-general

./: .env.example  .gitignore  Cargo.toml  README.md  debug_friends.js  deploy.sh  package-lock.json  package.json  playwright.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: ARCHITECTURE.md  CONFIGURE.md  DEPLOYMENT.md  DEVELOPMENT.md  E2E_TEST.md  LOGGING.md  PLAN.md
e2e-tests/: chat.spec.ts  conversation.spec.ts  e2e-flow.spec.ts  friend-flow.spec.ts  friends.spec.ts  group.spec.ts  login.spec.ts  register.spec.ts  websocket.spec.ts
migrations/: 001_initial_schema.sql  002_friend_system.sql
src/: error.rs  lib.rs  main.rs
src/api/: auth_extractor.rs  dto.rs  extractor.rs  mod.rs  websocket.rs
src/api/handlers/: auth.rs  friend.rs  group.rs  message.rs  mod.rs
src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs  trait.rs
src/config/: logging.rs  mod.rs  settings.rs
src/domain/: conversation.rs  device.rs  friendship.rs  group.rs  message.rs  mod.rs  user.rs
src/event/: bus.rs  mod.rs  types.rs
src/friend/: manager.rs  mod.rs  permission.rs
src/group/: manager.rs  mod.rs
src/infra/: mod.rs  user_store.rs
src/infra/cache/: mod.rs  redis.rs
src/infra/db/: conversation_repository.rs  device_repository.rs  friend_repository.rs  group_repository.rs  message_repository.rs  mod.rs  user_repository.rs
src/message/: handler.rs  mod.rs  router.rs  store.rs
src/server/: mod.rs
src/session/: device_registry.rs  manager.rs  mod.rs
static/: chat.html  friends.html  index.html
static/css/: output.css
static/js/: api.js  auth.js  chat.js  friend.js  websocket.js
tests/e2e/: auth_test.rs  db_test.rs  friend_test.rs  group_test.rs  message_test.rs  mod.rs  websocket_test.rs
tests/e2e/common/: fixture.rs  mod.rs  test_app.rs  test_app_db.rs  test_user.rs
