[package]
name = "chat-general"
version = "0.1.0"
edition = "2021"
description = "A scalable chat backend framework based on Axum"
license = "MIT"
repository = "https://github.com/your-org/chat-general"

[lib]
name = "chat_general"
path = "src/lib.rs"

[[bin]]
name = "chat-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "fs"] }
hyper = { version = "1.9", features = ["full"] }
tokio = { version = "1.52", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Cache
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }

# Authentication
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
garde = { version = "0.22", features = ["derive", "email"] }

# Password hashing
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.13", features = ["json"] }
criterion = { version = "0.8", features = ["async_tokio"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serial_test = "3.4"
assert_matches = "1.5"
urlencoding = "2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
